--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/stepbeyondfoundation">
     <title>Step Beyond Foundation</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
 </head>
 <body>
-    <iframe src="https://sites.google.com/view/stepbeyondfoundation"></iframe>
+    <p>If you are not redirected automatically, <a href="https://sites.google.com/view/stepbeyondfoundation">click here</a>.</p>
 </body>
 </html>
