--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             height: 100%;
         }
     </style>
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <iframe src="https://stepbeyondfoundation.weebly.com/"></iframe>
